AB#49 fix: List.of() needs at least sdk 30